// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTemplateVariables() it should work with github username 1`] = `
Object {
  "GITHUB_USERNAME": "username",
}
`;

exports[`getTemplateVariables() it should work without github username 1`] = `
Object {
  "GITHUB_USERNAME": undefined,
}
`;
